# go-bazel-gazelle-mock-pb

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  requirements.md
.agent/rules/: go-bazel.md
.agent/workflows/: tdd-cycle.md
api/phonebook/v1/: BUILD.bazel  database.go  mock_database_test.go  person.proto  person_server_test.go  person_test.go  server.go
cmd/server/: BUILD.bazel  main.go
