load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "asymptotic.world/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["//api/phonebook/v1:phonebook"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
