load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["person.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "asymptotic.world/api/phonebook/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "phonebook",
    srcs = ["database.go"],
    embed = [":v1_go_proto"],
    importpath = "asymptotic.world/api/phonebook/v1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "phonebook_test",
    srcs = ["person_test.go"],
    embed = [":phonebook"],
)
